# SimpleSearch

./: .coverage  .gitignore  Design.plantuml  Makefile  ReadMe.md  SimpleSearch.sln  User.mk  coverage.lcov  manage.py  pyproject.toml
.github/workflows/: makefile.yml
SimpleSearch/: Class1.cs  urls.py  wsgi.py
SimpleSearch.Tests/: SimpleSearch.Tests.csproj  UnitTest1.cs
SimpleSearch.Web/: Program.cs  SimpleSearch.Web.csproj  WeatherForecast.cs
SimpleSearch.Web/Controllers/: GreetController.cs  WeatherForecastController.cs
SimpleSearch.Web/Properties/: launchSettings.json
SimpleSearch/tests/: test_scaffolding.py
settings/: base.py  local.py
simple_search/: asgi.py  environment.py  settings.py  urls.py  view.py  wsgi.py
simple_search/tests/: test_scaffolding.py  test_views.py
