[tool.poetry]
name = "SimpleSearch"
version = "0.1.0"
description = ""
authors = ["Pramod Jangam <pjangam2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
unittest = "^0.0"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
