[tool.poetry]
name = "SimpleSearch"
version = "0.1.0"
description = ""
authors = ["Pramod Jangam <pjangam2015@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-extensions = "^3.1.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
unittest = "^0.0"
coverage = "^6.3.3"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
